# codex-pool

./: Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: release.yml
scripts/: e2e-proxy.sh  install.sh
skills/codex-pool/: SKILL.md
skills/codex-pool/agents/: openai.yaml
skills/codex-pool/references/: commands.md
skills/codex-pool/scripts/: ensure-codex-pool.sh
src/: auth.rs  commands.rs  context.rs  lib.rs  main.rs  models.rs  output.rs  ranking.rs  store.rs  updater.rs  usage.rs  utils.rs
src/proxy/: anthropic.rs  backend.rs  mod.rs  openai.rs  runtime.rs  scheduler.rs
